--- a/package.json
+++ b/package.json
@@ -7,6 +7,20 @@
   "scripts": {
     "start": "node --use_strict start.js"
   },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "firebase": "^2.4.2",
+    "firebase-queue": "^1.3.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "node-router": "^0.1.5",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "serve-favicon": "~2.3.0"
+  },
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
   "license": "ISC"
 }
