--- a/public/package.json
+++ b/public/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" "
+    "postinstall": "typings install && tsc"
   },
   "keywords": [],
   "author": "",
