--- a/public/package.json
+++ b/public/package.json
@@ -5,6 +5,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts" : {
+    "tsc"  : "tsc",
+    "typings" : "typings"
+  },
   "dependencies": {
     "a2-in-memory-web-api": "^0.1.15",
     "angular2": "2.0.0-beta.15",
@@ -17,9 +21,6 @@
     "zone.js": "0.6.10"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "http-server": "^0.9.0",
-    "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
     "typings": "^0.7.12"
   },
