fixed build script

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,8 +1,6 @@
 #!/bin/bash
 
-echo "$(pwd)"
-ls -la
 cd "${OPENSHIFT_REPO_DIR}/public"
 npm install
-typings install
-tsc
+npm run typings -- install
+npm run tsc
