--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^2.1.18",
     "morgan": "~1.6.1",
     "node-router": "^0.1.5",
+    "path": "^0.12.7",
     "serve-favicon": "~2.3.0"
   },
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
