--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "start": "node --use_strict start.js",
     "start-local": "node --use_strict app.js"
   },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "mongodb": "^2.1.18",
+    "morgan": "~1.6.1",
+    "node-router": "^0.1.5",
+    "path": "^0.12.7",
+    "serve-favicon": "~2.3.0"
+  },
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
   "license": "ISC"
 }
