--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "mongodb": "^2.1.18",
     "morgan": "~1.6.1",
     "node-router": "^0.1.5",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "serve-favicon": "~2.3.0"
-  },
+    "serve-favicon": "~2.3.0"},
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
   "license": "ISC"
 }
