--- a/public/package.json
+++ b/public/package.json
@@ -7,7 +7,8 @@
   "license": "ISC",
   "scripts": {
     "tsc": "tsc",
-    "typings": "typings"
+    "typings": "typings",
+    "lite": "lite-server"
   },
   "dependencies": {
     "@angular/common": "^2.0.0-rc.1",
@@ -17,18 +18,18 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
-    "underscore": "^1.8.3",
-
-    "systemjs": "0.19.27",
+    "angular2-in-memory-web-api": "0.0.7",
+    "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
+    "ng2-bootstrap": "1.0.16",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    
-    "angular2-in-memory-web-api": "0.0.7",
-    "bootstrap": "^3.3.6"
+    "systemjs": "0.19.27",
+    "underscore": "^1.8.3",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
+    "lite-server": "2.2.0",
     "typescript": "^1.8.10",
     "typings": "^0.7.12"
   },
