--- a/public/package.json
+++ b/public/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
     "@angular/router-deprecated": "^2.0.0-rc.1",
+    "angular2-highcharts": "^0.1.0",
     "angular2-in-memory-web-api": "0.0.7",
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.0",
