--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "cheerio": "^0.20.0",
     "connect-mongo": "^1.2.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -19,9 +20,11 @@
     "morgan": "~1.6.1",
     "node-router": "^0.1.5",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "tough-cookie2": "^0.12.2"
   },
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
   "license": "ISC"
