--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "~2.3.0",
+    "underscore": "^1.8.3"
   },
   "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
   "license": "ISC"
