--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "main": "start.js",
   "scripts": {
-    "start": "node --use_strict start.js"
+    "start": "node --use_strict start.js",
+    "start-local": "node --use_strict app.js"
   },
-  "author": "Ionut-Cristian Florescu <ionut.florescu@gmail.com>",
-  "license": "ISC"
+  "author": "gjuhasz86",
+  "license": "AGPLv3"
 }
