--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "start.js",
   "scripts": {
-    "start": "node --use_strict start.js",
+    "start": "node --use_strict start.js"
   },
   "author": "gjuhasz86",
   "license": "AGPLv3"
