--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -8,4 +8,10 @@ export HOME=$OPENSHIFT_DATA_DIR/npmcache
 cd "${OPENSHIFT_REPO_DIR}/server"
 npm install
 
+cd "${OPENSHIFT_REPO_DIR}/public"
+npm install --dev
+npm run typings -- install
+npm run tsc
+npm prune
+
 export HOME=$OLD_HOME
