--- a/public/tsconfig.json
+++ b/public/tsconfig.json
@@ -9,5 +9,10 @@
     "removeComments": false,
     "noImplicitAny": false,
     "outDir": "js"
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "typings/main",
+    "typings/main.d.ts"
+  ]
 }
