--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "node-router": "^0.1.5",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "~2.3.0",
     "underscore": "^1.8.3"
