--- a/public/package.json
+++ b/public/package.json
@@ -26,9 +26,9 @@
     "angular-in-memory-web-api": "~0.1.15",
     "angular2-highcharts": "^0.4.3",
     "core-js": "^2.4.1",
-    "ng2-bootstrap": "^1.1.16",
+    "ng2-bootstrap": "1.1.16",
     "ng2-completer": "^1.0.0",
-    "octicons": "^2.0.0",
+    "octicons": "^3.5.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
