--- a/public/package.json
+++ b/public/package.json
@@ -33,12 +33,14 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
+    "underscore": "^1.8.3",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/jquery": "^2.0.40",
     "@types/node": "^6.0.45",
+    "@types/underscore": "^1.7.36",
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
